--- a/home.html
+++ b/home.html
@@ -9,7 +9,27 @@
     <link rel="stylesheet" href="./css/css-reset.css" />
     <link rel="stylesheet" href="./css/home.css" />
   </head>
-  <body>
+  <body dir="rtl">
+    <header id="main-header">
+      <nav top-nav>
+        <ul>
+          <li><a href="#">ورود</a></li>
+          <li><a href="#">ثبت نام</a></li>
+          <li><a href="#">ورود کاربران دانشگاه به سیستم</a></li>
+        </ul>
+      </nav>
+      <nav bottom-nav>
+        <a href="./home.html">
+          <img src="./sources/logo.png" alt="سازمان امور دانشجویان" />
+        </a>
+        <button id="menu-btn">
+          <img
+            src="https://img.icons8.com/material-outlined/50/000000/more.png"
+            alt="More"
+          />
+        </button>
+      </nav>
+    </header>
     <script src="./js/main.js"></script>
   </body>
 </html>
