--- a/home.html
+++ b/home.html
@@ -44,7 +44,6 @@
             <li><a href="#">English</a></li>
           </ul>
         </nav>
-
         <a href="./home.html">
           <img src="./sources/logo.png" alt="سازمان امور دانشجویان" />
         </a>
@@ -69,19 +68,83 @@
             src="https://img.icons8.com/external-becris-lineal-becris/40/ffffff/external-next-mintab-for-ios-becris-lineal-becris.png"
           />
         </button>
-        <div class="slides active">
+        <div class="slides active fade">
           <img src="./sources/1.jpg" alt="Slide" />
         </div>
-        <div class="slides de-active">
+        <div class="slides de-active fade">
           <img src="./sources/2.jpg" alt="Slide" />
         </div>
-        <div class="slides de-active">
+        <div class="slides de-active fade">
           <img src="./sources/3.jpg" alt="Slide" />
         </div>
-        <div class="slides de-active">
+        <div class="slides de-active fade">
           <img src="./sources/4.jpg" alt="Slide" />
         </div>
       </div>
+
+      <ul id="middle-tiles">
+        <li>
+          <header>
+            <div services-ico class="tiles-icons">
+              <img
+                src="https://img.icons8.com/ios-filled/50/ffffff/settings.png"
+              />
+            </div>
+            <h3>خدمات</h3>
+          </header>
+          <main>
+            <ul>
+              <li><a href="#">اداره ی امور دانش آموختگان</a></li>
+              <li><a href="#">اداره کل دانشجویان داخل</a></li>
+              <li><a href="#">اداره امور دانشجویان غیر ایرانی</a></li>
+              <li><a href="#">مشاوره و سلامت</a></li>
+            </ul>
+          </main>
+        </li>
+        <li enroll>
+          <header>
+            <div enroll-ico class="tiles-icons">
+              <img
+                src="https://img.icons8.com/ios-glyphs/50/ffffff/person-male.png"
+              />
+            </div>
+            <h3>ثبت نام</h3>
+          </header>
+          <main>
+            <p>
+              کاربر گرامی، به منظور ورود به سامانه امور دانشجویان می بایست در
+              سیستم عضو شده باشید. برای ثبت نام در سامانه از لینک زیر استفاده
+              نمایید.
+            </p>
+            <div buttons>
+              <button enroll-btn><a href="#">ثبت نام</a></button>
+              <button login-btn><a href="#">ورود</a></button>
+              <button uni-user-login>
+                <a href="#">ورود کاربران دانشگاه به سیستم</a>
+              </button>
+            </div>
+          </main>
+        </li>
+        <li>
+          <header>
+            <div news-ico class="tiles-icons">
+              <img
+                src="https://img.icons8.com/fluency-systems-regular/50/ffffff/news.png"
+              />
+            </div>
+            <h3>اخبار</h3>
+          </header>
+          <main>
+            <ul>
+              <li><a href="#">اطلاعیه برگزاری آزمون</a></li>
+              <li><a href="#">اطلاعیه ثبت نام دانشجوی نمونه</a></li>
+              <li><a href="#">اطلاعیه های اداره اعزام</a></li>
+              <li><a href="#">هزینه های ارزشیابی ندارک تحصیلی خارجه</a></li>
+              <li><a href="#">اطلاعیه در خصوص فراموشی رمز عبور سامانه</a></li>
+            </ul>
+          </main>
+        </li>
+      </ul>
     </main>
 
     <script src="./js/menu.js" defer></script>
