Add footer and style it, almost everything done.

--- a/home.html
+++ b/home.html
@@ -147,6 +147,38 @@
       </ul>
     </main>
 
+    <footer id="main-footer">
+      <ul>
+        <li>
+          <h4>آخرین خبر ها</h4>
+          <ul latest-news>
+            <li><a href="#"> (بدون عنوان) 2019/08/27 </a></li>
+            <li><a href="#"> (بدون عنوان) 2019/03/02 </a></li>
+          </ul>
+        </li>
+        <li>
+          <h4>پیوند ها</h4>
+          <ul links>
+            <li><a href="#">دفتر مقام معظم رهبري</a></li>
+            <li><a href="#">پايگاه اطلاع رساني دولت</a></li>
+            <li><a href="#">پايگاه اطلاع رساني رياست جمهوري</a></li>
+            <li><a href="#">وزارت علوم، تحقيقات و فناوري</a></li>
+          </ul>
+        </li>
+        <li categories>
+          <h4>دسته ها</h4>
+          <p>هیچ دسته ای پیدا نشد</p>
+        </li>
+      </ul>
+
+      <div copyright>
+        <p>
+          © تمام حقوق محفوظ برای سازمان امور دانشجویان وزارت علوم، تحقیقات و
+          فناوری است
+        </p>
+      </div>
+    </footer>
+
     <script src="./js/menu.js" defer></script>
     <script src="./js/slider.js" defer></script>
     <script src="./js/main.js" type="module" defer></script>
