Solving some problems and alternating slider with links on small screens.

--- a/home.html
+++ b/home.html
@@ -69,20 +69,63 @@
           />
         </button>
         <div class="slides active fade">
-          <img src="./sources/1.jpg" alt="Slide" />
+          <a href="#"><img src="./sources/1.jpg" alt="Slide" /></a>
         </div>
         <div class="slides de-active fade">
-          <img src="./sources/2.jpg" alt="Slide" />
+          <a href="#"><img src="./sources/2.jpg" alt="Slide" /></a>
         </div>
         <div class="slides de-active fade">
-          <img src="./sources/3.jpg" alt="Slide" />
+          <a href="#"><img src="./sources/3.jpg" alt="Slide" /></a>
         </div>
         <div class="slides de-active fade">
-          <img src="./sources/4.jpg" alt="Slide" />
+          <a href="#"><img src="./sources/4.jpg" alt="Slide" /></a>
         </div>
+
+        <ul id="slide-count">
+          <li>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+          </li>
+        </ul>
       </div>
 
       <ul id="middle-tiles">
+        <li>
+          <header>
+            <div class="tiles-icons">
+              <img
+                src="https://img.icons8.com/fluency-systems-filled/50/ffffff/appointment-reminders.png"
+              />
+            </div>
+            <h3>اطلاعیه ها</h3>
+          </header>
+          <main>
+            <ul>
+              <li>
+                <a href="#"> اطلاعیه های اعزام </a>
+              </li>
+              <li>
+                <a href="#">
+                  اطلاعیه مهم درخصوص امور نظام وظیفه دانشجویان خارج
+                </a>
+              </li>
+              <li>
+                <a href="#"> اطلاعیه در خصوص فراموشی رمزعبور سامانه </a>
+              </li>
+              <li>
+                <a href="#"> راهنمای تصویری ارزشیابی مدارک تخصیلی خارجی </a>
+              </li>
+            </ul>
+          </main>
+        </li>
         <li>
           <header>
             <div services-ico class="tiles-icons">
